# py-typedlogic

./: .cruft.json  .gitignore  404.html  AGENT_POLICY_PLAN.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  pytest.ini  sitemap.xml  tox.ini
.github/workflows/: codex-code-review.yml  deploy-docs.yml  pypi-publish.yml  qc.yml
advanced/: index.html
api/: index.html
api/solver/: index.html
api/transformations/: index.html
cli/: index.html
concepts/: index.html
concepts/compilers/: index.html
concepts/datamodel/: index.html
concepts/decorators/: index.html
concepts/generators/: index.html
concepts/models/: index.html
concepts/parsers/: index.html
concepts/profiles/: index.html
concepts/solvers/: index.html
concepts/transformations/: index.html
concepts/types/: index.html
conversion/compilers/: index.html
conversion/parsers/: index.html
docs/: advanced.md  api.md  cli.md  examples.md  index.md  quickstart.md  roadmap.md  troubleshooting.md
docs/api/: solver.md  transformations.md
docs/concepts/: compilers.md  datamodel.md  decorators.md  generators.md  index.md  models.md  parsers.md  profiles.md  solvers.md  transformations.md  types.md
docs/examples/: probabilistic-score.ipynb  sql-compiler.ipynb  synbio-design-checks.ipynb  synbio_theory.py  tlog-cli.ipynb  tlog-cli.md
docs/learning/: multiple-models.ipynb  semantics.ipynb
docs/tutorial/: 01-first-program.ipynb  02-using-python-data-model.ipynb  03-probabilistic-logic.ipynb  04-owldl.ipynb  05-cli.ipynb
examples/: index.html
examples/probabilistic-score/: index.html
examples/sql-compiler/: index.html
examples/synbio-design-checks/: index.html
examples/tlog/: worlds.tlog
examples/tlog-cli/: index.html
faq/: index.html
integrations/solvers/: index.html
learning/multiple-models/: index.html
learning/semantics/: index.html
quickstart/: index.html
roadmap/: index.html
search/: search_index.json
src/typedlogic/: __init__.py  builtins.py  cli.py  compiler.py  datamodel.py  decorators.py  evaluation.py  generators.py  parser.py  profiles.py  pybridge.py  registry.py  solver.py  transformations.py
tests/: __init__.py  conftest.py  test_cli.py  test_compilers.py  test_datamodel.py  test_decorators.py  test_evaluation.py  test_generators.py  test_hilog.py  test_imports.py  test_introspection.py  test_pybridge.py  test_python_parser.py  test_solver.py  test_sql_compiler.py  test_tlog_cli.py  test_tlog_parser.py  test_transformations.py  test_typing.py
tests/__snapshots__/: tests.theorems.animals-ClifCompiler.clif  tests.theorems.animals-FOLCompiler.fol  tests.theorems.animals-ProbLogCompiler.problog  tests.theorems.animals-ProblogCompiler.problog  tests.theorems.animals-PrologCompiler.pro  tests.theorems.animals-Prover9Compiler.prover9  tests.theorems.animals-SExprCompiler.sexpr  tests.theorems.animals-SouffleCompiler.dl  tests.theorems.animals-TPTPCompiler.tptp  tests.theorems.animals-YAMLCompiler.yaml  tests.theorems.animals-Z3FunctionalCompiler.z3.fun  tests.theorems.animals-Z3SExprCompiler.z3.sxpr  tests.theorems.barbers-ClifCompiler.clif  tests.theorems.barbers-FOLCompiler.fol  tests.theorems.barbers-ProbLogCompiler.problog  tests.theorems.barbers-PrologCompiler.pro  tests.theorems.barbers-Prover9Compiler.prover9  tests.theorems.barbers-SExprCompiler.sexpr  tests.theorems.barbers-SouffleCompiler.dl  tests.theorems.barbers-TPTPCompiler.tptp  tests.theorems.barbers-YAMLCompiler.yaml  tests.theorems.barbers-Z3FunctionalCompiler.z3.fun  tests.theorems.barbers-Z3SExprCompiler.z3.sxpr  tests.theorems.defined_types_example-ClifCompiler.clif  tests.theorems.defined_types_example-FOLCompiler.fol  tests.theorems.defined_types_example-ProbLogCompiler.problog  tests.theorems.defined_types_example-ProblogCompiler.problog  tests.theorems.defined_types_example-PrologCompiler.pro  tests.theorems.defined_types_example-Prover9Compiler.prover9  tests.theorems.defined_types_example-SExprCompiler.sexpr  tests.theorems.defined_types_example-SouffleCompiler.dl  tests.theorems.defined_types_example-TPTPCompiler.tptp  tests.theorems.defined_types_example-YAMLCompiler.yaml  tests.theorems.ehr_phenotyping-ClifCompiler.clif  tests.theorems.ehr_phenotyping-FOLCompiler.fol  tests.theorems.ehr_phenotyping-ProbLogCompiler.problog  tests.theorems.ehr_phenotyping-PrologCompiler.pro  tests.theorems.ehr_phenotyping-Prover9Compiler.prover9  tests.theorems.ehr_phenotyping-SExprCompiler.sexpr  tests.theorems.ehr_phenotyping-SouffleCompiler.dl  (+154 more)
tests/input/: chebi.pro  chem.pro  dih.pro  family_owldl.py  is_a.pro  linkml_rules.md  linkml_rules.tlog  ro.ttl  scoring.pro
tests/test_frameworks/: test_jsonlog.py  test_owldl.py  test_owlstar.py
tests/test_integrations/: conftest.py  test_family_relationships.py  test_solvers.py
tests/test_parsers/: test_catalog_parser.py  test_clif_parser.py  test_dataframe_parser.py  test_yaml_parser.py
tests/test_utilities/: test_import_closure.py
tests/theorems/: animals.py  barbers.py  class_inheritance.py  defined_types_example.py  ehr_phenotyping.py  enums_example.py  family_relationships.py  gluconeogenesis.py  links_distance_asym.py  mortals.py  mortals2.py  numbers.py  optional_example.py  paths.py  paths_with_distance.py  predicate_example.py  signaling_pathways.py  simple_contradiction.py  types_example.py  unary_predicates.py
troubleshooting/: index.html
tutorial/05-cli/: index.html
(+247 files in other folders)
