[project]
name = "typedlogic"
dynamic = ["version"]
description = "typedlogic"
authors = [
    {name = "Author 1", email = "author@org.org"}
]
license = {text = "MIT"}
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "importlib-metadata>=8.2.0",
    "typer>=0.12.5",
]

[project.optional-dependencies]
pydantic = ["pydantic"]
clingo = ["clingo"]
z3 = ["z3-solver"]
pyprover = ["pyprover"]
snakelog = ["snakelog"]
problog = ["problog"]
clorm = ["clorm"]
rdflib = ["rdflib"]
sympy = ["sympy"]
owl = ["py-horned-owl>=1.0.0,!=1.0.1"]
gavel-owl = ["gavel-owl", "ply"]
llm = ["llm"]
pandas = ["pandas"]
pandera = ["pandera[mypy]"]

[project.scripts]
typedlogic = "typedlogic.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "ruff",
    "tox>=4.16.0",
    "mypy",
    "types-PyYAML",
    "jupyter",
    "papermill",
    "nbdime",
    "nbformat",
    "pre-commit>=3.3.3",
    "mkdocs",
    "mkdocs-mermaid2-plugin",
    "mkdocstrings[crystal,python]",
    "mknotebooks>=0.8.0",
    "mkdocs-windmill",
    "mkdocs-material",
    "mkdocs-click",
    "mkdocs-with-pdf",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

[tool.ruff]
lint.extend-ignore = [
    "D211",  # `no-blank-line-before-class`
    "D212",  # `multi-line-summary-first-line`
    "D203",  # `blank-line-before-docstring`
    ]
line-length = 120

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]

# Select or ignore from https://beta.ruff.rs/docs/rules/
lint.select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "S",  # flake8-bandit
    "W",  # Warning
]

lint.unfixable = []
target-version = "py310"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.codespell]
skip = "*.po,*.ts,.git,pyproject.toml,*.ofn,*.owl,*.ttl"
count = ""
quiet-level = 3
ignore-words-list = "fof,te,disjointness,NotIn,EHR"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[[tool.mypy.overrides]]
module = "pyhornedowl.*"
ignore_errors = true
follow_imports = "skip"

[tool.mypy]
exclude = "owl"
